--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 body {
   margin: 0;
   padding: 0;
+  /* background-color: #efefef; */
+  /* background-color: black; */
+  background: radial-gradient(ellipse at center, rgba(0,0,0,0.7) 0%,rgba(0,0,0,1) 73%,rgba(0,0,0,1) 100%);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
